/*
 * MIT License
 *
 * Copyright (c) 2018 Choko (choko@curioswitch.org)
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */
syntax = "proto3";

package curioswitch.eggworld;

option java_package = "org.curioswitch.eggworld.api";
option java_multiple_files = true;

// Ingredients that can be used to find a recipe.
enum Ingredient {
  // Bananas.
  BANANA = 0;

  // Cabbage.
  CABBAGE = 1;

  // Garlic.
  GARLIC = 2;

  // Onions.
  ONION = 3;

  // Potatoes.
  POTATOES = 4;

  // Spinach.
  SPINACH = 5;

  // Bacon.
  BACON = 6;

  // Beef.
  BEEF = 7;

  // Cheese.
  CHEESE = 8;

  // Chicken.
  CHICKEN = 9;

  // Milk
  MILK = 10;

  // Pork.
  PORK = 11;

  // Bread.
  BREAD = 12;

  // Chile.
  CHILE = 13;

  // Chocolate.
  CHOCOLATE = 14;

  // Honey.
  HONEY = 15;

  // Nuts.
  NUTS = 16;

  // Wine.
  WINE = 17;
}

// A request to check what ingredients can still be used with the user's currently selected
// ingredients. Only ingredients that can be added to produce an actual recipe are returned.
message CheckIngredientsRequest {
  // The currently selected ingredients.
  repeated Ingredient selected_ingredient = 1;
}

// A response containing selectable ingredients.
message CheckIngredientsResponse {
  // Ingredients can be selected along with the ones in CheckIngredientsRequest.selected_ingredient.
  repeated Ingredient selectable_ingredient = 1;
}

// A request to find a random recipe for a set of ingredients.
message FindRecipeRequest {
  // The ingredients to find recipes for.
  repeated Ingredient ingredient = 1;
}

// A response with a random recipe.
message FindRecipeResponse {
  // The URL for the recipe. Clients can redirect to it to show the user recipe details.
  string recipe_url = 1;
}

// Egg World, a service for determining recipes for a given set of ingredients (e.g., recipes using
// ingredients in your refrigerator).
service EggworldService {
  // Check what ingredients can still be used given currently selected ones.
  rpc CheckIngredients (CheckIngredientsRequest) returns (CheckIngredientsResponse);

  // Finds a recipe for the given ingredients.
  rpc FindRecipe (FindRecipeRequest) returns (FindRecipeResponse);
}
